--- a/index.css
+++ b/index.css
@@ -1,13 +1,15 @@
 * {
-    margin: 0;
-    padding: 0;
-    font-family: 'Courier New', Courier, monospace;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: "Courier New", Courier, monospace;
+  box-sizing: border-box;
 }
 
 .container {
-    width: 100%;
-    height: 100vh;
-    background: #2c2c54;
-
+  width: 100%;
+  height: 100vh;
+  background: #2c2c54;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
