style: add styles to calculator class

--- a/index.css
+++ b/index.css
@@ -13,3 +13,9 @@
   align-items: center;
   justify-content: center;
 }
+
+.calculator {
+    background: #a40e4c;
+    padding: 20px;
+    border-radius: 10px;
+}
